--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
             <button>Authorize</button>
         </div>
         <hr/>
+        <a href="google.com">sample link</a>
         <h1>Followed Pages</h1>
             <div id="following">Not loaded</div>
         <h1>Followed Forums</h1>
