--- a/options.html
+++ b/options.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <div id="buttonDiv">
-    </div>
-    <div>
-      <p>Choose a different background color!</p>
-    </div>
+    There's nothing to edit yet.
   </body>
   <script src="options.js"></script>
 </html>
