--- a/popup.html
+++ b/popup.html
@@ -5,14 +5,19 @@
     </head>
     <body>
         <div class="auth">
-            <p>Hello Troper!</p>
+            <img src="https://tvtropes.org/images/logo-white-big.png"  width="180">
+            <p class="greeting">Hello,&nbsp;</p>
+            <p class="greeting" id="name">Troper</p>
+            <p class="greeting">!</p>
             <button>Authorize</button>
         </div>
-        <hr/>
+        <hr>
         <h1>Followed Pages</h1>
             <div id="following">Not loaded</div>
+        <hr>
         <h1>Followed Forums</h1>
             <div id="forums">Not loaded</div>
+        <hr>
         <script src="popup.js"></script>
     </body>
 </html>
