--- a/src/popup.html
+++ b/src/popup.html
@@ -7,15 +7,15 @@
         <div class="auth">
             <img src="https://tvtropes.org/images/logo-white-big.png"  width="180">
             <p class="greeting">Hello,&nbsp;</p>
-            <p class="greeting" id="name">Troper</p>
+            <p class="greeting" id="name"><a href="https://tvtropes.org/pmwiki/pmwiki.php/Tropers/Amonimus" target="_blank">Troper</a></p>
             <p class="greeting">!</p>
             <button>Authorize</button>
         </div>
         <hr>
-        <h1>Followed Pages</h1>
+        <h1>Followed <a href="https://tvtropes.org/pmwiki/awl.php" target="_blank">Pages</a></h1>
             <div id="following">Not loaded</div>
         <hr>
-        <h1>Followed Forums</h1>
+        <h1>Followed <a href="https://tvtropes.org/pmwiki/thread_watch.php" target="_blank">Forums</a></h1>
             <div id="forums">Not loaded</div>
         <hr>
         <script src="popup.js"></script>
