--- a/src/options.html
+++ b/src/options.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
-  <body>
-    There's nothing to edit yet.
-  </body>
-  <script src="options.js"></script>
+    <head>
+    </head>
+    <body>
+        <label for="update">Refresh rate (minutes):</label>
+        <input type="number" id="update" name="update" min="1">
+    </body>
+    <script src="options.js"></script>
 </html>
