--- a/src/options.html
+++ b/src/options.html
@@ -4,7 +4,9 @@
     </head>
     <body>
         <label for="update">Refresh rate (minutes):</label>
-        <input type="number" id="update" name="update" min="1">
+        <input type="number" style="width: 50px;" id="update" name="update" min="1" value="1">
+        <br>
+        <button id="Submit">Update</button>
     </body>
     <script src="options.js"></script>
 </html>
