fixed bug with discussions

--- a/src/popup.html
+++ b/src/popup.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="auth">
-            <img class="logo" src="https://tvtropes.org/images/logo-white-big.png" width="180">
+            <a href="https://tvtropes.org" target="_blank"><img class="logo" src="https://tvtropes.org/images/logo-white-big.png" width="180"></a>
             <div id="name">
                 <p>Hello, Troper!</p>
             </div>
