--- a/src/popup.html
+++ b/src/popup.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>TVtropes Helper Popup</title>
         <link rel="stylesheet" href="popup.css">
+        <script src="popup.js"></script>
     </head>
     <body>
         <div class="auth">
@@ -12,8 +14,28 @@
         </div>
         <hr>
         <div id="login">
-            <iframe scrolling="no" src="https://tvtropes.org/pmwiki/login_prompt.php" width="100%" height="600px"></iframe>
+            <!-- <iframe scrolling="no" src="https://tvtropes.org/pmwiki/login_prompt.php" width="100%" height="600px"></iframe> -->
         </div>
+        <div class="toolbar">
+            <a href="https://tvtropes.org/pmwiki/query.php?type=att" target="_blank">ATT</a> =
+            <a href="https://tvtropes.org/pmwiki/query.php?type=wl" target="_blank">Wishlist</a> =
+            <a href="https://tvtropes.org/pmwiki/query.php?type=bug" target="_blank">Bugs</a> =
+            <a href="https://tvtropes.org/pmwiki/query.php?type=tf" target="_blank">TF</a> =
+            <a href="https://tvtropes.org/pmwiki/query.php?type=ykts" target="_blank">YKTS</a> =
+            <a href="https://tvtropes.org/pmwiki/tlp_activity.php" target="_blank">TLP</a> =
+            <a href="https://tvtropes.org/pmwiki/conversations.php?topic=renames" target="_blank">TRS</a> =
+            <a href="https://tvtropes.org/pmwiki/conversations.php?topic=images" target="_blank">IP</a> =
+            <a href="https://tvtropes.org/pmwiki/cutlist.php" target="_blank">CL</a> =
+            <a href="https://tvtropes.org/pmwiki/pmwiki.php/Main/Administrivia" target="_blank">Admin</a>
+            <hr>
+            <a href="https://tvtropes.org/pmwiki/profile.php" target="_blank">Account</a> =
+            <a href="https://tvtropes.org/pmwiki/pm.php" target="_blank">PM</a> =            
+            <a href="https://tvtropes.org/pmwiki/to_do_list.php" target="_blank">TODO</a> =
+            <a href="editor.html" target="_blank">Editor</a> =
+            <a href="wickchecker.html" target="_blank">WickCheck</a> =
+            <a href="querytracker.html" target="_blank">QueryTracker</a>
+        </div>
+        <hr>
         <div id="main">
             <h1>Followed <a href="https://tvtropes.org/pmwiki/awl.php" target="_blank">Pages</a></h1>
                 <div id="following">Not loaded</div>
@@ -22,6 +44,5 @@
                 <div id="forums">Not loaded</div>
             <hr>
         </div>
-        <script src="popup.js"></script>
     </body>
 </html>
